<resources>
    <string name="app_name">ChallongeAndroid</string>

    <string name="challonge_url_api_key">https://challonge.com/settings/developer</string>
    <string name="challonge_default_url">https://api.challonge.com/v1/tournaments</string>
    <string name="challonge_file_extension">.json</string>
    <string name="challonge_participants_extension">/participants</string>
    
    <string name="challonge_get_tournament_object">tournament</string>
    <string name="challonge_get_participant_object">participant</string>

    <string name="nav_home">Home</string>
    <string-array name="nav_drawer_items">
        <item >Bracket</item>
        <item >Participants</item>
        <item >Standings</item>
        <item >Log</item>
        <item >Settings</item>
    </string-array>

    <string name="action_reload">Reload</string>
    <string name="action_settings">Settings</string>

    <string name="retry">Retry</string>
    <string name="ok">OK</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="log_in">Log In</string>

    <string name="connection_error">Connection error</string>
    <string name="connection_error_message">You might have a connection problem, please retry. If the problem persist, please contact me at spartan.plume@gmail.com</string>
    <string name="log_in_error">Log In error</string>
    <string name="log_in_error_message">Your username or your api key is invalid.</string>

    <string name="log_in_page_title">Log In</string>
    <string name="home_page_title">Tournaments</string>
    <string name="bracket_page_title">Bracket</string>
    <string name="participants_page_title">Participants</string>

    <string name="username">Username</string>
    <string name="api_key">API Key</string>
    <string name="api_key_button">Get your API Key</string>

    <string name="participant_seed_separator">.</string>

    <!--<string name="nav_bracket">Bracket</string>
    <string name="nav_participants">Participants</string>
    <string name="nav_standings">Standings</string>
    <string name="nav_log">Log</string>
    <string name="nav_settings">Settings</string>-->
</resources>
