<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_padding" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!--<TextView
            android:id="@+id/username_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="@dimen/log_in_placeholder"
            android:textColor="@color/log_in_placeholder" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/log_in_placeholder" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/log_in_margin_between_forms"
                android:inputType="textNoSuggestions"
                android:hint="@string/username"
                android:textSize="@dimen/log_in_form_text"
                android:textColor="@color/log_in_form_text" />

        </android.support.design.widget.TextInputLayout>

        <!--<TextView
            android:id="@+id/api_key_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:text="@string/api_key"
            android:textSize="@dimen/log_in_placeholder"
            android:textColor="@color/log_in_placeholder" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/api_key_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_layout"
            android:textColorHint="@color/log_in_placeholder" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/api_key"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/log_in_margin_between_forms_and_buttons"
                android:inputType="textVisiblePassword"
                android:hint="@string/api_key"
                android:textSize="@dimen/log_in_form_text"
                android:textColor="@color/log_in_form_text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/get_api_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/api_key_layout"
            android:layout_marginBottom="@dimen/log_in_margin_between_buttons"
            android:text="@string/api_key_button"
            android:textSize="@dimen/log_in_api_key_button_text"
            android:textColor="@color/secondary_button_text"
            android:background="@drawable/selector_secondary_button" />

        <Button
            android:id="@+id/log_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/get_api_key"
            android:text="@string/log_in"
            android:textSize="@dimen/log_in_api_key_button_text"
            android:textColor="@color/primary_button_text"
            android:background="@drawable/selector_primary_button" />

    </RelativeLayout>

    </ScrollView>

</RelativeLayout>